; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_sd.c_vlclua_node_add_subnode.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_sd.c_vlclua_node_add_subnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"node\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_node_add_subnode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_node_add_subnode(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32**, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @vlclua_get_this(i32* %5)
  %7 = inttoptr i64 %6 to i32*
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i64 @luaL_checkudata(i32* %8, i32 1, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %10 = inttoptr i64 %9 to i32**
  store i32** %10, i32*** %4, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = load i32**, i32*** %4, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @vlclua_sd_create_node(i32* %13, i32* %14)
  %16 = call i32 @vlclua_sd_add_sub_common(i32* %11, i32** %12, i32 %15)
  ret i32 %16
}

declare dso_local i64 @vlclua_get_this(i32*) #1

declare dso_local i64 @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i32 @vlclua_sd_add_sub_common(i32*, i32**, i32) #1

declare dso_local i32 @vlclua_sd_create_node(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
